update "Changes" to change name module

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for perl distribution CellBIS-SimpleAuth
+Revision history for perl distribution Mojolicious::Plugin::Hakkefuin
 
 {{$NEXT}}
           - Login and Logout
